--- a/style.css
+++ b/style.css
@@ -3,4 +3,8 @@ font-family: 'Times New Roman', Times, serif;
 margin: 0;
     padding: 0;
     background-color: black;
+    color: white;
+}
+header{
+text-align: center;
 }
